TLMBLGIS-203 - remove G Terrain layer and hide Events layer from the control, mod the menu anchor for current/upcoming so nav does not break in 2 at certain widths

--- a/mbofui/app/css/custom.css
+++ b/mbofui/app/css/custom.css
@@ -20,7 +20,9 @@ body {
   padding-top:50px
 }
 
-
+.leaflet-control-layers-separator, .leaflet-control-layers-overlays {
+  display:none;
+}
 nav.navbar {
   background:#00274c
 }
