TLMBLGIS-210 - show _more info_ link only if message is over 200 chars, but not if it is equals, also show message without link if message is 200 or less

--- a/mbofui/app/views/popup.html
+++ b/mbofui/app/views/popup.html
@@ -13,8 +13,10 @@
   </div>
   <hr class="popupRule">
   <div class="popupMessage" ng-show="!revealInfo">
-    <span ng-show="event.message.length > 200">{{event.message |  limitTo: 200}} <a href="#" ng-click="revealInfo=!revealInfo"> ... more?</a></span>
-    <span  ng-show="event.message.length < 200">{{event.message}}</span>
+    <span ng-show="event.message.length > 200">{{event.message |  limitTo: 200}} 
+      <a href="#" ng-click="revealInfo=!revealInfo"> ... more?</a>
+    </span>
+    <span  ng-show="event.message.length <= 200">{{event.message}}</span>
   </div>
   <div class="popupMessage" ng-show="revealInfo">
     {{event.message}} <a href="#" ng-click="revealInfo=!revealInfo">... less?</a>
