--- a/mbofui/app/css/custom.css
+++ b/mbofui/app/css/custom.css
@@ -158,13 +158,12 @@ nav.navbar {
 }
 
 @media (max-width: 767px) {
-  .modal-body {
-      max-height: calc(100vh - 210px);
-      overflow-y: auto;
+  .modal-open {
+      -webkit-overflow-scrolling: auto;
+      overflow-y: scroll !important;
   }
 }
 
-/* Smartphones (portrait and landscape) */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   .logo-peacock {
     top:5%;
