--- a/mbofui/app/css/custom.css
+++ b/mbofui/app/css/custom.css
@@ -3,8 +3,8 @@ body {
     margin: 0;
 }
 html, body {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 body.entry {
   padding-top:0
