--- a/mbofui/app/views/event-edit.html
+++ b/mbofui/app/views/event-edit.html
@@ -1,5 +1,5 @@
 <div class="alert alert-warning" role="alert" ng-show="validationFailuresEdit">Sorry, some fields are missing or incorrect.</div>
-<div class="form-group eventTitle">
+<div class="form-group title">
   <label for="eventTextEdit">Title</label>
   <span class="req-text">(required)</span>
   <input type="text" ng-model="$parent.editEvent.title" class="form-control" id="eventTitleEdit" required></textarea>
